feat: Endpoint Relatório Despesas/Categorias com filtro de tempo